# purelang_runtime

./: .gitignore  Cargo.toml  test.plb
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/gc/: Cargo.toml
crates/gc/src/: lib.rs  trace.rs
crates/gc_derive/: Cargo.toml
crates/gc_derive/src/: lib.rs
src/: lib.rs  pl_lib_impl.rs  type_system.rs  value.rs  vm.rs
src/pl_lib_impl/: System_Array_1.rs  System_Boolean.rs  System_Console_.rs  System_Enum.rs  System_Integers.rs  System_Null.rs  System_Object.rs  System_String.rs  System_ValueType.rs  System_Void.rs  tests.rs
src/pl_lib_impl/System_Console_/: console_pal_unix.rs  console_pal_windows.rs  terminal_format_strings.rs
src/pl_lib_impl/System_Console_/console_pal_unix/: pal_io.rs  pal_signal.rs  util.rs
src/type_system/: assembly.rs  class.rs  get_traits.rs  interface.rs  manager.rs  method.rs  method_table.rs  struct.rs  tests.rs  type_handle.rs
src/vm/: cpu.rs  tests.rs
src/vm/cpu/: register.rs
